// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`convertToCoreMessages > assistant message > should handle assistant message with tool invocations (parts) 1`] = `
[
  {
    "content": [
      {
        "text": "Let me calculate that for you.",
        "type": "text",
      },
      {
        "args": {
          "numbers": [
            1,
            2,
          ],
          "operation": "add",
        },
        "toolCallId": "call1",
        "toolName": "calculator",
        "type": "tool-call",
      },
    ],
    "role": "assistant",
  },
  {
    "content": [
      {
        "result": "3",
        "toolCallId": "call1",
        "toolName": "calculator",
        "type": "tool-result",
      },
    ],
    "role": "tool",
  },
]
`;

exports[`convertToCoreMessages > assistant message > should handle assistant message with tool invocations 1`] = `
[
  {
    "content": [
      {
        "text": "Let me calculate that for you.",
        "type": "text",
      },
      {
        "args": {
          "numbers": [
            1,
            2,
          ],
          "operation": "add",
        },
        "toolCallId": "call1",
        "toolName": "calculator",
        "type": "tool-call",
      },
    ],
    "role": "assistant",
  },
  {
    "content": [
      {
        "result": "3",
        "toolCallId": "call1",
        "toolName": "calculator",
        "type": "tool-result",
      },
    ],
    "role": "tool",
  },
]
`;

exports[`convertToCoreMessages > assistant message > should handle assistant message with tool invocations that have multi-part responses (parts) 1`] = `
[
  {
    "content": [
      {
        "text": "Let me calculate that for you.",
        "type": "text",
      },
      {
        "args": {},
        "toolCallId": "call1",
        "toolName": "screenshot",
        "type": "tool-call",
      },
    ],
    "role": "assistant",
  },
  {
    "content": [
      {
        "experimental_content": [
          {
            "data": "imgbase64",
            "type": "image",
          },
        ],
        "result": [
          {
            "data": "imgbase64",
            "type": "image",
          },
        ],
        "toolCallId": "call1",
        "toolName": "screenshot",
        "type": "tool-result",
      },
    ],
    "role": "tool",
  },
]
`;

exports[`convertToCoreMessages > assistant message > should handle assistant message with tool invocations that have multi-part responses 1`] = `
[
  {
    "content": [
      {
        "text": "Let me calculate that for you.",
        "type": "text",
      },
      {
        "args": {},
        "toolCallId": "call1",
        "toolName": "screenshot",
        "type": "tool-call",
      },
    ],
    "role": "assistant",
  },
  {
    "content": [
      {
        "experimental_content": [
          {
            "data": "imgbase64",
            "type": "image",
          },
        ],
        "result": [
          {
            "data": "imgbase64",
            "type": "image",
          },
        ],
        "toolCallId": "call1",
        "toolName": "screenshot",
        "type": "tool-result",
      },
    ],
    "role": "tool",
  },
]
`;

exports[`convertToCoreMessages > assistant message > should handle conversation with an assistant message that has empty tool invocations (parts) 1`] = `
[
  {
    "content": [
      {
        "text": "text1",
        "type": "text",
      },
    ],
    "role": "user",
  },
  {
    "content": [
      {
        "text": "text2",
        "type": "text",
      },
    ],
    "role": "assistant",
  },
]
`;

exports[`convertToCoreMessages > assistant message > should handle conversation with an assistant message that has empty tool invocations 1`] = `
[
  {
    "content": "text1",
    "role": "user",
  },
  {
    "content": "text2",
    "role": "assistant",
  },
]
`;

exports[`convertToCoreMessages > assistant message > should handle conversation with mix of tool invocations and text (parts) 1`] = `
[
  {
    "content": [
      {
        "text": "i am gonna use tool1",
        "type": "text",
      },
      {
        "args": {
          "value": "value-1",
        },
        "toolCallId": "call-1",
        "toolName": "screenshot",
        "type": "tool-call",
      },
    ],
    "role": "assistant",
  },
  {
    "content": [
      {
        "result": "result-1",
        "toolCallId": "call-1",
        "toolName": "screenshot",
        "type": "tool-result",
      },
    ],
    "role": "tool",
  },
  {
    "content": [
      {
        "text": "i am gonna use tool2 and tool3",
        "type": "text",
      },
      {
        "args": {
          "value": "value-2",
        },
        "toolCallId": "call-2",
        "toolName": "screenshot",
        "type": "tool-call",
      },
      {
        "args": {
          "value": "value-3",
        },
        "toolCallId": "call-3",
        "toolName": "screenshot",
        "type": "tool-call",
      },
    ],
    "role": "assistant",
  },
  {
    "content": [
      {
        "result": "result-2",
        "toolCallId": "call-2",
        "toolName": "screenshot",
        "type": "tool-result",
      },
      {
        "result": "result-3",
        "toolCallId": "call-3",
        "toolName": "screenshot",
        "type": "tool-result",
      },
    ],
    "role": "tool",
  },
  {
    "content": [
      {
        "args": {
          "value": "value-4",
        },
        "toolCallId": "call-4",
        "toolName": "screenshot",
        "type": "tool-call",
      },
    ],
    "role": "assistant",
  },
  {
    "content": [
      {
        "result": "result-4",
        "toolCallId": "call-4",
        "toolName": "screenshot",
        "type": "tool-result",
      },
    ],
    "role": "tool",
  },
  {
    "content": [
      {
        "text": "final response",
        "type": "text",
      },
    ],
    "role": "assistant",
  },
]
`;

exports[`convertToCoreMessages > assistant message > should handle conversation with multiple tool invocations that have step information (parts) 1`] = `
[
  {
    "content": [
      {
        "text": "response",
        "type": "text",
      },
      {
        "args": {
          "value": "value-1",
        },
        "toolCallId": "call-1",
        "toolName": "screenshot",
        "type": "tool-call",
      },
    ],
    "role": "assistant",
  },
  {
    "content": [
      {
        "result": "result-1",
        "toolCallId": "call-1",
        "toolName": "screenshot",
        "type": "tool-result",
      },
    ],
    "role": "tool",
  },
  {
    "content": [
      {
        "args": {
          "value": "value-2",
        },
        "toolCallId": "call-2",
        "toolName": "screenshot",
        "type": "tool-call",
      },
      {
        "args": {
          "value": "value-3",
        },
        "toolCallId": "call-3",
        "toolName": "screenshot",
        "type": "tool-call",
      },
    ],
    "role": "assistant",
  },
  {
    "content": [
      {
        "result": "result-2",
        "toolCallId": "call-2",
        "toolName": "screenshot",
        "type": "tool-result",
      },
      {
        "result": "result-3",
        "toolCallId": "call-3",
        "toolName": "screenshot",
        "type": "tool-result",
      },
    ],
    "role": "tool",
  },
  {
    "content": [
      {
        "args": {
          "value": "value-4",
        },
        "toolCallId": "call-4",
        "toolName": "screenshot",
        "type": "tool-call",
      },
    ],
    "role": "assistant",
  },
  {
    "content": [
      {
        "result": "result-4",
        "toolCallId": "call-4",
        "toolName": "screenshot",
        "type": "tool-result",
      },
    ],
    "role": "tool",
  },
]
`;

exports[`convertToCoreMessages > assistant message > should handle conversation with multiple tool invocations that have step information 1`] = `
[
  {
    "content": [
      {
        "text": "response",
        "type": "text",
      },
      {
        "args": {
          "value": "value-1",
        },
        "toolCallId": "call-1",
        "toolName": "screenshot",
        "type": "tool-call",
      },
    ],
    "role": "assistant",
  },
  {
    "content": [
      {
        "result": "result-1",
        "toolCallId": "call-1",
        "toolName": "screenshot",
        "type": "tool-result",
      },
    ],
    "role": "tool",
  },
  {
    "content": [
      {
        "args": {
          "value": "value-2",
        },
        "toolCallId": "call-2",
        "toolName": "screenshot",
        "type": "tool-call",
      },
      {
        "args": {
          "value": "value-3",
        },
        "toolCallId": "call-3",
        "toolName": "screenshot",
        "type": "tool-call",
      },
    ],
    "role": "assistant",
  },
  {
    "content": [
      {
        "result": "result-2",
        "toolCallId": "call-2",
        "toolName": "screenshot",
        "type": "tool-result",
      },
      {
        "result": "result-3",
        "toolCallId": "call-3",
        "toolName": "screenshot",
        "type": "tool-result",
      },
    ],
    "role": "tool",
  },
  {
    "content": [
      {
        "args": {
          "value": "value-4",
        },
        "toolCallId": "call-4",
        "toolName": "screenshot",
        "type": "tool-call",
      },
    ],
    "role": "assistant",
  },
  {
    "content": [
      {
        "result": "result-4",
        "toolCallId": "call-4",
        "toolName": "screenshot",
        "type": "tool-result",
      },
    ],
    "role": "tool",
  },
]
`;

exports[`convertToCoreMessages > multiple messages > should convert fully typed Message[] 1`] = `
[
  {
    "content": "What is the weather in Tokyo?",
    "role": "user",
  },
  {
    "content": "It is sunny in Tokyo.",
    "role": "assistant",
  },
]
`;

exports[`convertToCoreMessages > multiple messages > should handle a conversation with multiple messages (parts) 1`] = `
[
  {
    "content": [
      {
        "text": "What's the weather like?",
        "type": "text",
      },
    ],
    "role": "user",
  },
  {
    "content": [
      {
        "text": "I'll check that for you.",
        "type": "text",
      },
    ],
    "role": "assistant",
  },
  {
    "content": [
      {
        "text": "Thanks!",
        "type": "text",
      },
    ],
    "role": "user",
  },
]
`;

exports[`convertToCoreMessages > multiple messages > should handle conversation with multiple tool invocations and user message at the end (parts) 1`] = `
[
  {
    "content": [
      {
        "args": {
          "value": "value-1",
        },
        "toolCallId": "call-1",
        "toolName": "screenshot",
        "type": "tool-call",
      },
    ],
    "role": "assistant",
  },
  {
    "content": [
      {
        "result": "result-1",
        "toolCallId": "call-1",
        "toolName": "screenshot",
        "type": "tool-result",
      },
    ],
    "role": "tool",
  },
  {
    "content": [
      {
        "args": {
          "value": "value-2",
        },
        "toolCallId": "call-2",
        "toolName": "screenshot",
        "type": "tool-call",
      },
      {
        "args": {
          "value": "value-3",
        },
        "toolCallId": "call-3",
        "toolName": "screenshot",
        "type": "tool-call",
      },
    ],
    "role": "assistant",
  },
  {
    "content": [
      {
        "result": "result-2",
        "toolCallId": "call-2",
        "toolName": "screenshot",
        "type": "tool-result",
      },
      {
        "result": "result-3",
        "toolCallId": "call-3",
        "toolName": "screenshot",
        "type": "tool-result",
      },
    ],
    "role": "tool",
  },
  {
    "content": [
      {
        "args": {
          "value": "value-4",
        },
        "toolCallId": "call-4",
        "toolName": "screenshot",
        "type": "tool-call",
      },
    ],
    "role": "assistant",
  },
  {
    "content": [
      {
        "result": "result-4",
        "toolCallId": "call-4",
        "toolName": "screenshot",
        "type": "tool-result",
      },
    ],
    "role": "tool",
  },
  {
    "content": [
      {
        "text": "response",
        "type": "text",
      },
    ],
    "role": "assistant",
  },
  {
    "content": [
      {
        "text": "Thanks!",
        "type": "text",
      },
    ],
    "role": "user",
  },
]
`;

exports[`convertToCoreMessages > multiple messages > should handle conversation with multiple tool invocations and user message at the end 1`] = `
[
  {
    "content": [
      {
        "args": {
          "value": "value-1",
        },
        "toolCallId": "call-1",
        "toolName": "screenshot",
        "type": "tool-call",
      },
    ],
    "role": "assistant",
  },
  {
    "content": [
      {
        "result": "result-1",
        "toolCallId": "call-1",
        "toolName": "screenshot",
        "type": "tool-result",
      },
    ],
    "role": "tool",
  },
  {
    "content": [
      {
        "args": {
          "value": "value-2",
        },
        "toolCallId": "call-2",
        "toolName": "screenshot",
        "type": "tool-call",
      },
      {
        "args": {
          "value": "value-3",
        },
        "toolCallId": "call-3",
        "toolName": "screenshot",
        "type": "tool-call",
      },
    ],
    "role": "assistant",
  },
  {
    "content": [
      {
        "result": "result-2",
        "toolCallId": "call-2",
        "toolName": "screenshot",
        "type": "tool-result",
      },
      {
        "result": "result-3",
        "toolCallId": "call-3",
        "toolName": "screenshot",
        "type": "tool-result",
      },
    ],
    "role": "tool",
  },
  {
    "content": [
      {
        "args": {
          "value": "value-4",
        },
        "toolCallId": "call-4",
        "toolName": "screenshot",
        "type": "tool-call",
      },
    ],
    "role": "assistant",
  },
  {
    "content": [
      {
        "result": "result-4",
        "toolCallId": "call-4",
        "toolName": "screenshot",
        "type": "tool-result",
      },
    ],
    "role": "tool",
  },
  {
    "content": "response",
    "role": "assistant",
  },
  {
    "content": "Thanks!",
    "role": "user",
  },
]
`;

exports[`convertToCoreMessages > user message > should handle user message with attachment URLs (file) 1`] = `
[
  {
    "content": [
      {
        "text": "Check this document",
        "type": "text",
      },
      {
        "data": "dGVzdA==",
        "mimeType": "application/pdf",
        "type": "file",
      },
    ],
    "role": "user",
  },
]
`;

exports[`convertToCoreMessages > user message > should handle user message with attachment URLs 1`] = `
[
  {
    "content": [
      {
        "text": "Check this image",
        "type": "text",
      },
      {
        "image": Uint8Array [
          116,
          101,
          115,
          116,
        ],
        "type": "image",
      },
    ],
    "role": "user",
  },
]
`;
